<resources>
    <string name="app_name">Your TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo_app_welcomes_you">TODO app welcomes you!</string>
    <string name="show_my_todos">Show my todos</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="desciption">Desciption</string>
    <string name="go_to_home">Go to Home</string>
    <string name="your_todo_list_is_empty">Your TODO-list is empty</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="select_priority">Select Priority</string>
    <string name="set_todo">Set Todo</string>
    <string name="cancel">Cancel</string>
    <string name="enter_your_todo_task_description">Enter your TODO task description</string>
    <string name="enter_your_todo_task_title">Enter your TODO task title</string>
    <string name="mark_your_dates">Mark Your Dates</string>
    <string name="set_date">Set Date</string>
</resources>