<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        tools:context=".TODODataActivity">


        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="10dp"
            android:inputType="textPersonName"
            android:hint="@string/enter_your_todo_task_title"/>

        <EditText
            android:id="@+id/etTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="10dp"
            android:gravity="start|top"
            android:hint="@string/enter_your_todo_task_description"
            android:inputType="textMultiLine" />

        <ImageView
            android:id="@+id/ivDate"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/calendar"
            android:clickable="true"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"/>

        <ImageView
            android:id="@+id/ivTime"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/time"
            android:clickable="true"/>

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"/>

            <ImageView
                android:id="@+id/ivHighPrior"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/high_priority"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:clickable="true"/>

            <ImageView
                android:id="@+id/ivLowPrior"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/low_priority"
                android:clickable="true"/>
<!--        </LinearLayout>-->

        <TextView
            android:id="@+id/tvPrior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_priority"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"/>

        <Button
            android:id="@+id/btnSetTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_todo"
            android:padding="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

    </LinearLayout>
</ScrollView>